fix: Deleted old env tests, since they should not be relevant anymore, added new database connection tests with mocked PostgreSQL container